--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+  <script src="https://kit.fontawesome.com/f2e0134efe.js" crossorigin="anonymous"></script>
 </html>
